--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.Rproj
+.Rdata
+.Rhistory
 *.py[cod]
 
 # C extensions
@@ -35,3 +38,5 @@ nosetests.xml
 .pydevproject
 
 PA1/.DS_Store
+.Rproj.user
+.DS_Store
